refactoring and optimization methods